fix: Indicator contrast to make it more readable
(cherry picked from commit e2b3dd60c28ba899a717fdc501d995befb47a4b8)

# Conflicts:
#	frappe/public/scss/desk/dark.scss

--- a/frappe/public/scss/common/css_variables.scss
+++ b/frappe/public/scss/common/css_variables.scss
@@ -190,15 +190,15 @@ $input-height: 28px !default;
 	--text-on-dark-blue: var(--blue-800);
 	--text-on-green: var(--dark-green-700);
 	--text-on-yellow: var(--yellow-700);
-	--text-on-orange: var(--orange-600);
+	--text-on-orange: var(--orange-700);
 	--text-on-red: var(--red-600);
-	--text-on-gray: var(--gray-600);
-	--text-on-grey: var(--gray-600);
-	--text-on-darkgrey: var(--gray-700);
-	--text-on-dark-gray: var(--gray-700);
+	--text-on-gray: var(--gray-700);
+	--text-on-grey: var(--gray-700);
+	--text-on-darkgrey: var(--gray-800);
+	--text-on-dark-gray: var(--gray-800);
 	--text-on-light-gray: var(--gray-800);
 	--text-on-purple: var(--purple-700);
-	--text-on-pink: var(--pink-600);
+	--text-on-pink: var(--pink-700);
 	--text-on-cyan: var(--cyan-800);
 
 	// alert colors
